# make-transcripts

./: .gitignore  README.md  pyproject.toml
make_transcripts/: make_transcript.py
